# cpp-sdk-samples

./: .travis.yml  CMakeLists.txt  Dockerfile  ISSUE_TEMPATE.txt  ISSUE_TEMPLATE.md  ISSUE_TEMPLATE.txt  README.md  affdex-win-samples.sln  appveyor.yml
AffdexMe/: AffdexMe.csproj  AffdexMe.csproj.template  CMakelists.txt  MainWindow.xaml  MainWindow.xaml.cs  MetricSelectionUI.xaml  MetricSelectionUI.xaml.cs  NameToResourceConverter.cs  README.md  ReadMe.txt  Readme.html
AffdexMe/Properties/: AssemblyInfo.cs  Resources.resx.template  Settings.Designer.cs  Settings.settings
cmake_modules/: FindAffectivaSpeech.cmake  FindAffectivaVision.cmake  Macros.cmake
common/: PlottingImageListener.hpp  Visualizer.cpp  Visualizer.h
docker/: Dockerfile  Dockerfile-CentOS  Dockerfile-Ubuntu
opencv-webcam-demo/: CMakeLists.txt  opencv-webcam-demo.cpp  opencv-webcam-demo.vcxproj  opencv-webcam-demo.vcxproj.filters
speech/: CMakeLists.txt  README.md
speech/headers/: Logger.h
speech/mic/: CMakeLists.txt  MicRecorder.cpp  MicRecorder.h  main.cpp
speech/wav/: CMakeLists.txt  WAVReader.cpp  WAVReader.h  main.cpp
video-demo/: CMakeLists.txt  video-demo.cpp  video-demo.vcxproj  video-demo.vcxproj.filters
vision/: CMakeLists.txt  README.md  affdex-win-samples.sln
vision/docker/: Dockerfile-CentOS  Dockerfile-Ubuntu
vision/frame-detector-video-demo/: CMakeLists.txt  VideoDemo.cpp
vision/frame-detector-webcam-demo/: AFaceListener.hpp  CMakeLists.txt  PlottingImageListener.hpp  StatusListener.hpp  Visualizer.cpp  Visualizer.h  WebcamDemo.cpp  frame-detector-webcam-demo.cpp  frame-detector-webcam-demo.vcxproj  frame-detector-webcam-demo.vcxproj.filters  packages.config
vision/shared/: AFaceListener.h  AffectivaLogo.h  LocationsConfig.h  PlottingImageListener.h  StatusListener.h  Visualizer.cpp  Visualizer.h
